Fri Sep 27 07:53:45 GMT 2013  Olly Betts <olly@survex.com>

	* python3/smoketest.py,python3/util.i: smoketest.py now passes.

Fri Sep 27 04:23:54 GMT 2013  Olly Betts <olly@survex.com>

	* python3/docs/examples/simplesearch.py,python3/python.i,
	  python3/pythontest.py,python3/smoketest.py: All methods returning
	  std::string now return 'bytes' in Python, except for
	  get_description()/__str__().  (see #346)

Wed Sep 25 02:50:39 GMT 2013  Olly Betts <olly@survex.com>

	* php/smoketest.php: Reenable the FieldProcessor subclass test for PHP
	  5.4, as this one does work.

Tue Sep 24 10:00:05 GMT 2013  Olly Betts <olly@survex.com>

	* .gitignore: Update for switch from gzip to xz.

Tue Sep 24 09:55:17 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,xapian-bindings.spec.in: Compress source tarballs with
	  xz instead of gzip.

Thu Sep 19 06:52:11 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,python/,python3/.gitignore,
	  python3/Makefile.am,python3/docs/examples/,python3/docs/index.html,
	  python3/: Split python3 bindings into a separate subdirectory, to
	  make it simpler to handle differences between python2 and python3.
	  This also makes it easier to test both, as a tree can now be
	  configured for both at once.

Wed Sep 18 12:58:51 GMT 2013  Olly Betts <olly@survex.com>

	* python/Makefile.am: Further updates for PEP 3147.

Wed Sep 18 12:50:00 GMT 2013  Olly Betts <olly@survex.com>

	* python/util.i: Fix std::string input typemaps for Python 3.
	  (see #346)

Wed Sep 18 10:56:35 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,python/Makefile.am: Handle the PEP 3147 names which
	  .pyc and .pyo files use in newer Python 3 versions.  (see #346)

Wed Sep 18 00:36:50 GMT 2013  Olly Betts <olly@survex.com>

	* python/util.i: Rename next() to __next__() for Python 3 as iterators
	  need to have a __next__() method there.  (see #346)

Mon Sep 16 12:00:41 GMT 2013  Olly Betts <olly@survex.com>
